change for call rate and payment module
