# swagger/payment.json
@@ -1,43 +1,55 @@
 {
     "tags": [
       {
-        "name": "Contact",
-        "description": "API for contact CRUD operations."
+        "name": "Payment",
+        "description": "API for payment CRUD operations."
       }
     ],
     "components": {
       "schemas": {
-        "ContactResponseSchema": {
+        "PaymentResponseSchema": {
           "type": "object",
           "properties": {
             "_id": {
               "type": "string",
               "example": "666968c3bb67a71a9b27fe57"
             },
-            "firstName": {
-              "type": "string",
-              "example": "first name"
-            },
-            "lastName": {
-                "type": "string",
-                "example": "last name"
-            },
-            "phoneNumber": {
-              "type": "string",
-              "example": "3409129812"
-            },
-            "countryCode": {
-              "type": "string",
-              "example": "+91"
-            },
-            "status": {
+            "card": {
               "type": "string",
               "example": ""
             },
-            "sid": {
+            "serviceUsed": {
+              "type": "string",
+              "enum": ["paypal"]
+            },
+            "servicePaymentStatus": {
+              "type": "string",
+              "example": ""
+            },
+            "servicePaymentId": {
                 "type": "string",
                 "example": ""
-              },
+            },
+            "description": {
+              "type": "string",
+              "example": ""
+            },
+            "type": {
+                "type": "string",
+                "enum": ["ADD"]
+            },
+            "amount": {
+                "type": "number",
+                "example": 10
+            },
+            "status": {
+              "type": "string",
+              "enum": ["SUCCESS", "FAILED"]
+            },
+            "currency": {
+                "type": "string",
+                "enum": ["USD", "INR"]
+            },
             "isDeleted": {
               "type": "boolean",
               "example": false
@@ -59,7 +71,7 @@
             "userId": {
                 "type": "string",
                 "example": "666968c3bb67a71a9b27fe56"
-              },
+            },
             "createdBy": {
               "type": "string",
               "example": "666968c3bb67a71a9b27fe56"
@@ -73,11 +85,11 @@
       }
     },
     "paths": {
-      "/contacts": {
+      "/payments": {
         "post": {
-          "summary": "Add contact of user",
-          "description": "Endpoint to add contact",
-          "tags": ["Contact"],
+          "summary": "Add payment",
+          "description": "Endpoint to make payment for credit",
+          "tags": ["Payment"],
           "security": [{ "bearerAuth": [] }],
           "requestBody": {
             "required": true,
@@ -86,12 +98,12 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "phoneNumber": { "type": "string" },
-                    "countryCode": { "type": "string" },
-                    "firstName": { "type": "string" },
-                    "lastName": { "type": "string" }
+                    "amount": { "type": "number" },
+                    "servicePaymentId": { "type": "string" },
+                    "servicePaymentStatus": { "type": "string" },
+                    "currency": { "type": "string" }
                   },
-                  "required": ["phoneNumber", "countryCode", "firstName"]
+                  "required": ["amount", "servicePaymentId", "servicePaymentStatus"]
                 }
               }
             }
@@ -110,12 +122,12 @@
                       },
                       "message": {
                         "type": "string",
-                        "example": "Contact added successfully"
+                        "example": "Payment made succesfully"
                       },
                       "data": {
                         "type": "object",
                         "properties": {
-                            "contact": { "$ref": "#/components/schemas/ContactResponseSchema" }
+                            "payment": { "$ref": "#/components/schemas/PaymentResponseSchema" }
                         }
                       }
                     }
@@ -145,6 +157,17 @@
                   }
                 }
             },
+            "403":  {
+              "description": "",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "description": "",
+                    "$ref": "#/components/schemas/AuthorizationErrorResponseSchema"
+                  }
+                }
+              }
+            },
             "404":  {
               "description": "",
               "content": {
@@ -170,65 +193,29 @@
           }
         },
         "get": {
-            "summary": "Get contact list of user",
-            "description": "Endpoint to get contact list of user",
-            "tags": ["Contact"],
+            "summary": "Get payment history",
+            "description": "Endpoint to get payment history",
+            "tags": ["Payment"],
             "security": [{ "bearerAuth": [] }],
             "parameters": [
-                {
-                  "name": "firstName",
-                  "in": "query",
-                  "description": "First name of the contact to search",
-                  "schema": {
-                    "type": "string",
-                    "example": "name"
-                  }
-                },
-                {
-                    "name": "lastName",
+                  {
+                    "name": "pageIndex",
                     "in": "query",
-                    "description": "Last name of the contact to search",
+                    "description": "Index of page to search",
                     "schema": {
-                      "type": "string",
-                      "example": "name"
-                    }
-                },
-                {
-                    "name": "phoneNumber",
-                    "in": "query",
-                    "description": "Phone number of the contact to search",
-                    "schema": {
-                      "type": "string",
-                      "example": "923409890123"
-                    }
-                },
-                {
-                    "name": "countryCode",
-                    "in": "query",
-                    "description": "Country code of the contact to search",
-                    "schema": {
-                      "type": "string",
-                      "example": "+91"
-                    }
-                },
-                {
-                  "name": "pageIndex",
-                  "in": "query",
-                  "description": "Index of page to search",
-                  "schema": {
-                    "type": "any",
-                    "example": "1"
-                  }
-                },
-                {
-                      "name": "pageSize",
-                      "in": "query",
-                      "description": "Number of entries to return in one page",
-                      "schema": {
                       "type": "any",
                       "example": "1"
-                      }
-                }
+                    }
+                  },
+                  {
+                        "name": "pageSize",
+                        "in": "query",
+                        "description": "Number of entries to return in one page",
+                        "schema": {
+                        "type": "any",
+                        "example": "1"
+                        }
+                  }
             ],
             "responses": {
               "200": {
@@ -244,15 +231,15 @@
                         },
                         "message": {
                           "type": "string",
-                          "example": "Contact list fetched succesfully"
+                          "example": "Payment history fetched succesfully"
                         },
                         "data": {
                           "type": "object",
                           "properties": {
-                              "contact": { 
+                              "payments": { 
                                 "type": "array",
                                 "items": {
-                                  "$ref": "#/components/schemas/ContactResponseSchema" } 
+                                  "$ref": "#/components/schemas/PaymentResponseSchema" } 
                                 },
                                 "totalCount": { "type": "number", "example": 1 },
                                 "pageCount": { "type": "number", "example": 1 },
@@ -289,6 +276,17 @@
                     }
                   }
               },
+              "403":  {
+              "description": "",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "description": "",
+                    "$ref": "#/components/schemas/AuthorizationErrorResponseSchema"
+                  }
+                }
+              }
+              },
               "404":  {
                 "description": "",
                 "content": {
@@ -315,125 +313,18 @@
         }
       },
   
-      "/contacts/{id}": {
-        "put": {
-          "summary": "Edit contact by id",
-          "description": "Endpoint to update contact",
-          "tags": ["Contact"],
-          "security": [{ "bearerAuth": [] }],
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "required": true,
-              "description": "ID of the contact to be updated",
-              "schema": {
-                "type": "string",
-                "example": "60d0fe4f5311236168a109ca"
-              }
-            }
-          ],
-          "requestBody": {
-            "required": true,
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "phoneNumber": { "type": "string" },
-                    "countryCode": { "type": "string" },
-                    "firstName": { "type": "string" },
-                    "lastName": { "type": "string" }
-                  },
-                  "required": ["phoneNumber", "countryCode", "firstName"]
-                }
-              }
-            }
-          },
-          "responses": {
-            "200": {
-              "description": "",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "object",
-                    "properties": {
-                      "success": {
-                        "type": "boolean",
-                        "example": true
-                      },
-                      "message": {
-                        "type": "string",
-                        "example": "Contact updated successfully"
-                      },
-                      "data": {
-                        "type": "object",
-                        "properties": {
-                            "contact": { "$ref": "#/components/schemas/ContactResponseSchema" }
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            },
-            "400": {
-              "description": "",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "description": "",
-                    "$ref": "#/components/schemas/BadRequestSchema"
-                  }
-                }
-              }
-            },
-            "401": {
-                "description": "",
-                "content": {
-                  "application/json": {
-                    "schema": {
-                      "description": "",
-                      "$ref": "#/components/schemas/AuthenticationErrorResponseSchema"
-                    }
-                  }
-                }
-            },
-            "404":  {
-              "description": "",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "description": "",
-                    "$ref": "#/components/schemas/RouteNotFoundResponseSchema"
-                  }
-                }
-              }
-            },
-            "500": {
-              "description": "",
-              "content": {
-                "application/json": {
-                    "schema": {
-                      "description": "",
-                      "$ref": "#/components/schemas/ErrorResponseSchema"
-                    }
-                }
-              }
-            }
-          }
-        },
+      "/payments/{id}": {
         "get": {
-            "summary": "Get contact by id",
-            "description": "Endpoint to get contact by id",
-            "tags": ["Contact"],
+            "summary": "Get payment by id",
+            "description": "Endpoint to get payment by id",
+            "tags": ["Payment"],
             "security": [{ "bearerAuth": [] }],
             "parameters": [
               {
                 "name": "id",
                 "in": "path",
                 "required": true,
-                "description": "ID of the contact to fetch",
+                "description": "ID of the payment to fetch",
                 "schema": {
                   "type": "string",
                   "example": "60d0fe4f5311236168a109ca"
@@ -454,12 +345,12 @@
                         },
                         "message": {
                           "type": "string",
-                          "example": "Contact detail fetched successfully"
+                          "example": "Payment detail fetched successfully"
                         },
                         "data": {
                           "type": "object",
                           "properties": {
-                              "contact": { "$ref": "#/components/schemas/ContactResponseSchema" }
+                              "payment": { "$ref": "#/components/schemas/PaymentResponseSchema" }
                           }
                         }
                       }
@@ -489,95 +380,16 @@
                     }
                   }
               },
-              "404":  {
-                "description": "",
-                "content": {
-                  "application/json": {
-                    "schema": {
-                      "description": "",
-                      "$ref": "#/components/schemas/RouteNotFoundResponseSchema"
-                    }
-                  }
-                }
-              },
-              "500": {
-                "description": "",
-                "content": {
-                  "application/json": {
-                      "schema": {
-                        "description": "",
-                        "$ref": "#/components/schemas/ErrorResponseSchema"
-                      }
+              "403":  {
+              "description": "",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "description": "",
+                    "$ref": "#/components/schemas/AuthorizationErrorResponseSchema"
                   }
                 }
               }
-            }
-        },
-        "delete": {
-            "summary": "Delete contact by id",
-            "description": "Endpoint to delete contact by id",
-            "tags": ["Contact"],
-            "security": [{ "bearerAuth": [] }],
-            "parameters": [
-              {
-                "name": "id",
-                "in": "path",
-                "required": true,
-                "description": "ID of the contact to delete",
-                "schema": {
-                  "type": "string",
-                  "example": "60d0fe4f5311236168a109ca"
-                }
-              }
-            ],
-            "responses": {
-              "200": {
-                "description": "",
-                "content": {
-                  "application/json": {
-                    "schema": {
-                      "type": "object",
-                      "properties": {
-                        "success": {
-                          "type": "boolean",
-                          "example": true
-                        },
-                        "message": {
-                          "type": "string",
-                          "example": "Contact deleted successfully"
-                        },
-                        "data": {
-                          "type": "object",
-                          "properties": {
-                              "contact": { "$ref": "#/components/schemas/ContactResponseSchema" }
-                          }
-                        }
-                      }
-                    }
-                  }
-                }
-              },
-              "400": {
-                "description": "",
-                "content": {
-                  "application/json": {
-                    "schema": {
-                      "description": "",
-                      "$ref": "#/components/schemas/BadRequestSchema"
-                    }
-                  }
-                }
-              },
-              "401": {
-                  "description": "",
-                  "content": {
-                    "application/json": {
-                      "schema": {
-                        "description": "",
-                        "$ref": "#/components/schemas/AuthenticationErrorResponseSchema"
-                      }
-                    }
-                  }
               },
               "404":  {
                 "description": "",
